Add html and css

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       </section>
 
         <div class="details">
-          <p>AGE: <span>19</span></p>
-          <p>RELATIONSHIP: <span>In a relationship</span></p>
-          <p>STUDY: <span>Thammasat University</span></p>
-          <p>DATE OF BIRTH: <span>19 SEPTEMBER 2005</span></p>
-          <p>FACULTY: <span>Computer Science</span></p>
+          <p>AGE: <span style="color: rgb(165, 198, 199);" >19</span></p>
+          <p>RELATIONSHIP: <span style="color: rgb(165, 198, 199);" >In a relationship</span></p>
+          <p>STUDY: <span style="color: rgb(165, 198, 199);" >Thammasat University</span></p>
+          <p>DATE OF BIRTH: <span style="color: rgb(165, 198, 199);" >19 SEPTEMBER 2005</span></p>
+          <p>FACULTY: <span style="color: rgb(165, 198, 199);" >Computer Science</span></p>
         </div>
       
         <div class="wrapper">
