--- a/myfuture.html
+++ b/myfuture.html
@@ -32,7 +32,7 @@
   </nav>
    <main>
     <section class="future">
-    br><br><h4>TALK ABOUT MY FUTURE</h4>
+    <br><br><h4>TALK ABOUT MY FUTURE</h4>
     <picture class="pics">
       <div class="skill">
             <h6>MY SKILL (NOW)</h6>
